@@ -1,3 +1,0 @@
-MAINTAINERCLEANFILES = Makefile.in
-
-SUBDIRS = opj_dec_server
